--- a/periodosunb/templates/periodosunb/index.html
+++ b/periodosunb/templates/periodosunb/index.html
@@ -1,9 +1,79 @@
-<html>
-	<head>
-		<title>Testing</title>
-	</head>
-	
-	<body>
-	
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
+
+    <title>Sistema de Análise de Dados</title>
+
+    {% load staticfiles %}
+    <!-- Bootstrap core CSS -->
+    <link type="text/css" href="{% static 'periodosunb/css/bootstrap.min.css' %}" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link type="text/css" href="{% static 'periodosunb/css/navbar-fixed-top.css' %}" rel="stylesheet">
+
+  </head>
+
+  <body>
+
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Sistema de Análise de Dados</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li role="separator" class="divider"></li>
+                <li class="dropdown-header">Nav header</li>
+                <li><a href="#">Separated link</a></li>
+                <li><a href="#">One more separated link</a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="../navbar/">Default</a></li>
+            <li><a href="../navbar-static-top/">Static top</a></li>
+            <li class="active"><a href="./">Fixed top <span class="sr-only">(current)</span></a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+
+    <div class="container">
+
+      <!-- Main component for a primary marketing message or call to action -->
+      <div class="jumbotron">
+        <h1>Título</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sollicitudin lectus nec euismod rutrum. Duis aliquam tristique risus ut dapibus. Integer volutpat, massa sit amet vestibulum laoreet, urna ligula consequat quam, a tempus ante nunc non magna. Vestibulum et velit rhoncus, imperdiet lacus non, vestibulum mauris. Cras vitae enim a nibh dapibus pharetra. Nullam vel sagittis magna. Suspendisse diam sapien, pulvinar ut quam sed, mollis rhoncus enim.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sollicitudin lectus nec euismod rutrum. Duis aliquam tristique risus ut dapibus. Integer volutpat, massa sit amet vestibulum laoreet, urna ligula consequat quam, a tempus ante nunc non magna. Quisque accumsan id lacus non venenatis. Aliquam elementum elit a mollis vulputate.</p>
+        <p>
+          <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button"> Mostrar dados </a>
+        </p>
+      </div>
+
+    </div> <!-- /container -->
+
+  </body>
 </html>
